--- a/gradle.properties
+++ b/gradle.properties
@@ -8,17 +8,17 @@ archives_base_name=artifacts
 maven_group=artifacts
 mod_version=11.0.4
 
-architectury_version=13.0.1
+architectury_version=13.0.4
 
 fabric_loader_version=0.15.9
 fabric_api_version=0.100.1+1.21
 
-neoforge_version=21.0.6-beta
+neoforge_version=21.0.109-beta
 
 expandability_version=12.0.0
-curios_version=8.0.0-beta.5+1.20.6
+curios_version=9.0.4+1.21
 cloth_config_version=15.0.127
-trinkets_version=3.9.0
+trinkets_version=3.10.0
 mod_menu_version=11.0.0-beta.2
 cardinal_components_version=6.1.0
 curious_armor_stands_version=7.0.0
