--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ allprojects {
             }
         }
         maven {
-            url "https://maven.theillusivec4.top/"
+            url "https://maven.octo-studios.com/releases"
             content {
                 includeGroupByRegex "top.theillusivec4.*"
             }
