Workaround broken unwrapKey

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -20,6 +20,7 @@ config="mixins.artifacts.neoforge.json"
 [[dependencies.artifacts]]
     modId="neoforge"
     type="required"
+    versionRange = "[21.0.133-beta,)"
     ordering="NONE"
     side="BOTH"
 
